Fix dropdowns having a horizontal scrollbar when the smallest option is selected
(Fixes #89)
- Fix dropdown ".open" appearance

--- a/style/component/dropdown.scss
+++ b/style/component/dropdown.scss
@@ -10,6 +10,12 @@
 		border: 5px solid transparent;
 		border-top-color: currentColor;
 	}
+	
+	&.open {
+		background: var(--color-button-active-background) !important;
+		border: var(--color-button-active-border) !important;
+		color: #fff6;
+	}
 }
 
 .dropdown-wrapper {
