--- a/style/index.scss
+++ b/style/index.scss
@@ -29,8 +29,8 @@
 	--color-button-border: #318bff82;
 	--color-button-hover-background: #318bffe6;
 	--color-button-hover-border: #4998ff;
-	--color-button-active-background: #318bff40;
-	--color-button-active-border: #318bff40;
+	--color-button-active-background: #153d72e6;
+	--color-button-active-border: #153d72e6;
 	
 	--color-button-warning-background: #792424;
 	--color-button-warning-border: #a10f0f;
